--- a/css/geral.css
+++ b/css/geral.css
@@ -40,6 +40,9 @@ img{
 header{
     color:#fff;
 }
+#procurar{
+    color:#000;
+}
 .lista-top{
     display: flex;
     flex-direction: row;
@@ -93,6 +96,48 @@ i{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+}
+.conteudo{
+    position: relative;
+}
+.formBanner::before{
+    display: block;
+    content: '';
+    height: 2px;
+    width: 100%;
+    background: lightgrey;
+}
+.formTab{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding: 10px 0 10px 0;
+    background: #EC1C24;
+}
+.formBanner{
+    position: absolute;
+    z-index: 2;
+    top:0;
+    left: 975px;
+    width: 274px;
+}
+.formConteudo{
+    background: #EC1C24;
+}
+.form{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+}
+.campo{
+    margin-bottom:10px;
+    color:#000;
+    padding: 5px; 
+}
+.campo::placeholder{
+    padding: 10px 10px 10px 5px;
 }
 .banner{
     width: 100%;
