--- a/css/geral.css
+++ b/css/geral.css
@@ -1,332 +1,172 @@
+/* Parte onde se altera o geral do site */
 *{
-    margin:0;
-    padding: 0;
-    font-family: sans-serif;
-    text-decoration: none;
-    color:#fff;
+    outline: none;
+    list-style-type: none;
+    text-decoration: none !important;
+    padding-inline-start:0;
 }
 img{
     width: 100%;
-    height: 100%;
 }
-.container{
+.linear{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+.coluna{
+    margin-left:20px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-content: space-around;
+}
+.divisoria{
+    border-bottom: 1px solid #a1a1a1;
+    padding: 7px 0;
+}
+/* Parte onde se altera o header */
+
+/* Parte onde se altera o topo */
+.topo{
+    background: #000;
+    height: 50px;
     width: 100%;
 }
 .top{
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    background: #000000;
+    justify-content: space-between;
     align-items: center;
-    min-height: 30px;
-    width: 100%;
-    font-size: 12px; 
 }
-/*.middle{
-    display: flex;
-    background: #a0a0a0;
-    min-height: 90px;
-    width: 100%;
-}*/
-.header{
+.top p{
+    color:#fff;
+    margin:0;
+}
+/* Parte onde se altera as redes socias */
+.redes{
     display: flex;
     flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-    background:linear-gradient(to bottom , #000 50%, #EC1C24 50%);
-    min-height: 180px;
-    width: 100%;
+    justify-content: flex-end;
 }
-header{
+.icone{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #fff;
+    border-radius: 100%;
+    width: 34px;
+    height: 31px;
+    margin: 10px;
+    font-size: 20px;
+    color:#000;
+    cursor: pointer;
+}
+.fab:hover{
+    animation-name:moveRedes;
+    animation-duration: .2s; 
+}
+#face:hover{
+    background: #3b5998;
     color:#fff;
 }
-#procurar{
+#insta:hover{
+    background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
+    color:#fff;
+}
+#you:hover{
+    background: #c4302b;
+    color:#fff;
+}
+/* Parte onde se altera a logo */
+.logo{
+    width: 350px;
+}
+.logo:after {
+    background: #fff;
+    content: '';
+    height: 88px;
+    left: -73px;
+    opacity: .3;
+    position: absolute;
+    top: -3px;
+    transform: rotate(35deg);
+    transition: all 550ms cubic-bezier(.19,1,.22,1);
+    width: 50px;
+    z-index: 5;
+}
+.logo:hover:after {
+    left: 94%;
+    transition: all 550ms cubic-bezier(.19,1,.22,1);
+}
+/* Parte onde se altera o whats */
+
+/* Parte onde se altera o menu */
+nav a{
     color:#000;
 }
-.lista-top{
+nav a:hover{
+    color:#000;
+}
+.lista{
     display: flex;
-    flex-direction: row;
-}
-.lista-top li{
-    padding: 0 5px;
-    list-style-type: none;
-    border-right: #fff solid 2px;
-}
-.lista-top li:nth-child(4){
-    border: none;
-}
-.wpp{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-i{
-    padding:0 5px; 
-}
-.login{
-    display: flex;
-    flex-direction: row;
-}
-.logoHeader{
-    position: absolute;
-    width: 150px;
-    height: 150px;
-    transition: 1s;
-    z-index: 1;
-    transform: rotate(-360deg);
-    left: 30px;
-    top:45;
-}
-#logo{
-    background-size: contain;
-}
-.logo-abs {
-    position: absolute;
-    z-index: 2;
-    left: 54px;
-    top: 74px;
-    width: 100px;
-    height: 100px;
-}
-.logoHeader:hover{
-    transform: rotate(360deg);
-    transition: 1s;
+    flex-direction:row;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
 }
 .menu{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-}
-.conteudo{
-    position: relative;
-}
-.formBanner::before{
-    display: block;
-    content: '';
-    height: 2px;
-    width: 100%;
-    background: lightgrey;
-}
-.formTab{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    padding: 10px 0 10px 0;
-    background: #EC1C24;
-}
-.formBanner{
-    position: absolute;
-    z-index: 2;
-    top:0;
-    left: 975px;
-    width: 274px;
-}
-.formConteudo{
-    background: #EC1C24;
-}
-.form{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    width: 100%;
-}
-.campo{
-    margin-bottom:10px;
-    color:#000;
-    padding: 5px; 
-}
-.campo::placeholder{
-    padding: 10px 10px 10px 5px;
-}
-.banner{
-    width: 100%;
-    height: 520px;
-}
-.logo{
-    width: 110px;
-    height: 110px;
-    transition: 1s;
-    transform: rotate(-360deg);
-}
-.logo:hover{
-    transition: 1s;
-    transform: rotate(360deg);
-}
-.footer{
-    padding:20px 0;
-    background: #000;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around; 
-    color:#fff;
-    min-height: 10px;
-}
-.news{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-}
-.news p{
-    font-size: 12px; 
-    max-width: 250px; 
-}
-#email{
-    height: 30px;
-    width: 100%;
-    background: #000;
-    border:2px solid #a0a0a0; 
-    color:#fff;
-    padding: 10px;
-}
-#email::placeholder{
-    padding: 10px;
-    color:#fff;
-}
-.btn{
-    background: #EC1C24;
-    color: #fff;
-    font-weight: bold;
-    border:none;
-    border-radius: 10px;
-    height: 30px;
-    width: 130px;
-    align-self: center; 
-    cursor: pointer;
-}
-.lista-footer{
-    font-size: 12px;
-    height: 200px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    cursor: pointer;
-}
-.tittle{
-    max-width: 130px;
-    padding-bottom:10px;
-    margin-bottom: 10px;
-    border-bottom:2px solid #EC1C24; 
-    align-self: center;
-}
-.container .lista-footer li {
-    margin-bottom:5px;
-    padding-bottom: 5px;
-    border-bottom: 2px solid rgba(125, 0,0,0);  
-}
-.container .lista-footer li:hover{
-    border-bottom: 2px solid #EC1C24;
-    transition: 1s;
-}
-body > footer > div > div:nth-child(5) > ul{
-    justify-content: flex-start;
-}
-.separador{
-    margin: -1px 30px; 
-    background: #a0a0a0;
-    height: 2px;
-    z-index: 1px;
-}
-.desenvolvedor{
-    font-size: 12px;
-    padding:20px 30px;
-    background: #000;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: flex-end; 
-    color:#fff;
-}
-body > footer > div:nth-child(3) > div > a{
-    margin-left: 2px;
-    font-weight:bold; 
-}
-.departamento{
-    margin: 30px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-.departamento h2{
     color: #000;
+    font-size: 24px;
+    margin: 1px;
+    padding: 20px;
+    border-radius: 5px;
 }
-.titulo-departamento{
-    align-self: center;
-    margin-bottom: 20px;
-    border-bottom: 2px solid #000;
+.menu:hover{
+    text-shadow:1px 1px rgba(0, 0, 0, 0.42);
 }
-.depar-conteudo{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+.menu:active {
+    box-shadow: inset -2px 2px 3px 3px rgba(0, 0, 0, 0.42);
 }
-.titulo-n{
-    background: #FF0009;
-    height: 20px;
-    padding: 10px;
+ul.border{
+    margin-bottom: 0;
 }
-.nintendo ul{
-    background: #D90005;
-    padding: 10px;
-    height: 100px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    font-size: 12px;
-    list-style-type: none;
+/*Parte onde se altera o banner*/
+.banner{
+    margin-top: 10px;
+    padding-right: 0;
+    padding-left: 0;
 }
-.titulo-p{
-    background: #006DD9;
-    height: 20px;
-    padding: 10px;
+/*Parte onde faremos as animações*/
+@keyframes moveRedes{
+   0% {transform: translateX(0px);}
+   25% {transform: translateX(-5px);}
+   50% {transform: translateX(0px);}
+   75% {transform: translateX(5px);}
+   100% {transform: translateX(0px);}
 }
-.play ul{
-    background: #0061C1;
-    padding: 10px;
-    height: 100px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    font-size: 12px;
-    list-style-type: none;
+/*Parte onde arrumaremos as resoluções*/
+/* @media (min-width: 320px) {
+    #face{
+        background: #3b5998;
+        color:#fff;
+    }
+    #insta{
+        background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
+        color:#fff;
+    }
+    #you{
+        background: #c4302b;
+        color:#fff;
+    }
+} */
+@media (min-width: 1920px) {
+    .container{
+        width: 1920px;
+    }
 }
-.titulo-x{
-    background: #01AF54;
-    height: 20px;
-    padding: 10px;
-}
-.xbox ul{
-    background: #009045;
-    padding: 10px;
-    height: 100px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    font-size: 12px;
-    list-style-type: none;
-}
-.titulo-pc{
-    background: #3C3C3C;
-    height: 20px;
-    padding: 10px;
-}
-.pc ul{
-    background: #000;
-    padding: 10px;
-    height: 100px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    font-size: 12px;
-    list-style-type: none;
-}
-.img-consoles{
-    transition: 1s;
-    width: 293px;
-    height: 153px;
-}
-.img-consoles:hover{
-    transform: scale(1.1);
-    transition: 1s;
+@media (min-width: 2560px) {
+    .container{
+        width: 2560px;
+    }
 }
