--- a/css/geral.css
+++ b/css/geral.css
@@ -27,6 +27,7 @@ img{
 }
 .titulo{
     text-align: center;
+    text-shadow:1px 1px rgba(0, 0, 0, 0.42);
 }
 /* Parte onde se altera o header */
 
@@ -45,6 +46,7 @@ img{
 .top p{
     color:#fff;
     margin:0;
+    padding-left: 10%;
 }
 /* Parte onde se altera as redes socias */
 .redes{
@@ -65,10 +67,6 @@ img{
     color:#000;
     cursor: pointer;
 }
-.fab:hover{
-    animation-name:moveRedes;
-    animation-duration: .2s; 
-}
 #face:hover{
     background: #3b5998;
     color:#fff;
@@ -80,6 +78,18 @@ img{
 #you:hover{
     background: #c4302b;
     color:#fff;
+}
+#face:hover .fab{
+    animation-name:moveRedes;
+    animation-duration: .2s; 
+}
+#insta:hover .fab{
+    animation-name:moveRedes;
+    animation-duration: .2s; 
+}
+#you:hover .fab{
+    animation-name:moveRedes;
+    animation-duration: .2s; 
 }
 /* Parte onde se altera a logo */
 .logo{
@@ -187,6 +197,13 @@ ul.border{
     width: 91%;
     z-index: -1;
 }
+.conteudo:hover .btnProduto{
+    box-shadow: 1px 1px 3px 3px rgba(0, 0, 0, 0.42);
+    transition: .5s;
+}
+.conteudo:hover .btnProduto:active {
+    box-shadow: none;
+}
 .conteudo p{
     overflow: auto;
     margin-top: 10px;
@@ -197,6 +214,32 @@ ul.border{
 .conteudo p::-webkit-scrollbar-thumb{
     background: linear-gradient(45deg,transparent,black);
     border-radius: 10px;
+}
+.btnProduto {
+    background: linear-gradient(45deg, black, transparent);
+    color: #fff;
+    text-shadow: 1px 1px rgba(0, 0, 0, 0.42);
+    margin: 10px 0 20px 0;
+    height: 30%;
+    width: 60%;
+    align-self: center;
+}
+.btnProduto:after {
+    background: #fff;
+    content: '';
+    height: 52px;
+    left: 10%;
+    opacity: .2;
+    position: absolute;
+    transform: rotate(35deg);
+    transition: all 550ms cubic-bezier(.19,1,.22,1);
+    width: 3%;
+    z-index: 5;
+    bottom: 3%;
+}
+.btnProduto:hover:after {
+    left: 82%;
+    transition: all 550ms cubic-bezier(.19,1,.22,1);
 }
 /*Parte onde faremos as animações*/
 @keyframes moveRedes{
@@ -214,16 +257,21 @@ ul.border{
         align-items: center;
     }
     .topo{
-        height: 77px;
+        height: 85px;
     }
     .top{
         flex-wrap: wrap-reverse;
-        text-align: center;
         height: 67px;
     }
     .redes{
-        margin-top:20px ;
         justify-content: center;
+        padding-right: 20%;
+    }
+    .titulo h1{
+        font-size: 27px;
+    }
+    .titulo h2{
+        font-size: 24px;
     }
     .produtos{
         flex-wrap: wrap;
@@ -244,7 +292,110 @@ ul.border{
         display: none;
     }
     .burguer{
+        position: absolute;
+        width: 57px;
+        height: 10%;
+        right: 10px;
+        top: 10px; 
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        border: 2px solid #a1a1a1;
+        border-radius: 10px;
+        background: 0 0;
+        padding: 0;
+        z-index: 5;
+    }
+    .animated-icon3 {
+        width: 30px;
+        height: 20px;
+        position: relative;
+        margin: 0px;
+        -webkit-transform: rotate(0deg);
+        -moz-transform: rotate(0deg);
+        -o-transform: rotate(0deg);
+        transform: rotate(0deg);
+        -webkit-transition: .5s ease-in-out;
+        -moz-transition: .5s ease-in-out;
+        -o-transition: .5s ease-in-out;
+        transition: .5s ease-in-out;
+        cursor: pointer;
+    }
+    .animated-icon3 span {
         display: block;
+        position: absolute;
+        height: 3px;
+        width: 100%;
+        border-radius: 9px;
+        opacity: 1;
+        left: 0;
+        -webkit-transform: rotate(0deg);
+        -moz-transform: rotate(0deg);
+        -o-transform: rotate(0deg);
+        transform: rotate(0deg);
+        -webkit-transition: .25s ease-in-out;
+        -moz-transition: .25s ease-in-out;
+        -o-transition: .25s ease-in-out;
+        transition: .25s ease-in-out;
+    }
+    .animated-icon3 span {
+        background: #f3e5f5;
+    } 
+    .animated-icon3 span:nth-child(1) {
+        top: 0px;
+        -webkit-transform-origin: left center;
+        -moz-transform-origin: left center;
+        -o-transform-origin: left center;
+        transform-origin: left center;
+    }  
+    .animated-icon3 span:nth-child(2) {
+        top: 10px;
+        -webkit-transform-origin: left center;
+        -moz-transform-origin: left center;
+        -o-transform-origin: left center;
+        transform-origin: left center;
+    }
+        
+    .animated-icon3 span:nth-child(3) {
+        top: 20px;
+        -webkit-transform-origin: left center;
+        -moz-transform-origin: left center;
+        -o-transform-origin: left center;
+        transform-origin: left center;
+        }
+        
+    .animated-icon3.open span:nth-child(1) {
+        -webkit-transform: rotate(45deg);
+        -moz-transform: rotate(45deg);
+        -o-transform: rotate(45deg);
+        transform: rotate(45deg);
+        top: 0px;
+        left: 8px;
+    }
+        
+    .animated-icon3.open span:nth-child(2) {
+        width: 0%;
+        opacity: 0;
+    }
+        
+    .animated-icon3.open span:nth-child(3) {
+        -webkit-transform: rotate(-45deg);
+        -moz-transform: rotate(-45deg);
+        -o-transform: rotate(-45deg);
+        transform: rotate(-45deg);
+        top: 21px;
+        left: 8px;
+    }   
+}
+@media (width:320px){
+    .top p{
+        padding-left: 0;
+    }
+}
+@media (width:768px){
+    .top p{
+        padding-left: 190px;
     }
 }
 @media (min-width: 1920px) {
@@ -257,3 +408,4 @@ ul.border{
         width: 1440px;
     }
 }
+ 
